fix updateMe
