# docs/swagger.json
@@ -289,10 +289,22 @@
                 "email": {
                     "type": "string"
                 },
+                "github_id": {
+                    "type": "string"
+                },
                 "name": {
                     "type": "string"
                 },
                 "password": {
+                    "type": "string"
+                },
+                "qiita_id": {
+                    "type": "string"
+                },
+                "x_id": {
+                    "type": "string"
+                },
+                "zenn_id": {
                     "type": "string"
                 }
             }
@@ -300,7 +312,19 @@
         "giiku-camp_internal_usecase_request.UpdateMeReq": {
             "type": "object",
             "properties": {
+                "github_id": {
+                    "type": "string"
+                },
                 "name": {
+                    "type": "string"
+                },
+                "qiita_id": {
+                    "type": "string"
+                },
+                "x_id": {
+                    "type": "string"
+                },
+                "zenn_id": {
                     "type": "string"
                 }
             }
@@ -355,13 +379,25 @@
                 "email": {
                     "type": "string"
                 },
+                "github_id": {
+                    "type": "string"
+                },
                 "id": {
                     "type": "string"
                 },
                 "name": {
                     "type": "string"
                 },
+                "qiita_id": {
+                    "type": "string"
+                },
                 "updated_at": {
+                    "type": "string"
+                },
+                "x_id": {
+                    "type": "string"
+                },
+                "zenn_id": {
                     "type": "string"
                 }
             }
